[tool.poetry]
name = "bitmex-async-rest"
version = "0.1.0"
description = ""
authors = ["Anders Ellenshøj Andersen <andersa@ellenshoej.dk>"]

[tool.poetry.dependencies]
python = "^3.7"
asks = "^2.4.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
